update api escrow
