# server/api/controllers/EscrowController.js
@@ -19,7 +19,6 @@ let BinkabiEscrow = require('../../contracts/build/contracts/BinkabiEscrow.json'
 let Escrow = contract(BinkabiEscrow)
 Escrow.setProvider(web3.currentProvider)
 
-let escrow = Escrow.deployed()
 
 module.exports = {
   createOrder: async function (req, res) {
@@ -28,7 +27,7 @@ module.exports = {
       seller = req.param('seller'),
       buyer = req.param('buyer')
 
-    if (!web3.eth.isAddress(seller) || !web3.eth.isAddress(buyer)) {
+    if (!web3.utils.isAddress(seller) || !web3.utils.isAddress(buyer)) {
       return res.status(400).json({error: true, message: 'Seller or Buyer is not wallet address'})
     }
 
@@ -39,6 +38,7 @@ module.exports = {
     if (parseFloat(amountBuyer) === 0.0 || parseFloat(amountSeller) === 0.0) {
       return res.status(400).json({error: true, message: 'Amount must greater than 0'})
     }
+    let escrow = await Escrow.deployed()
     try {
       let r = await escrow.createOrder(buyer, seller, amountBuyer, amountSeller, {from: await web3.eth.getCoinbase()})
       return res.json({error: false, message: 'Create an order successful', orderId: parseInt(r)})
@@ -55,6 +55,7 @@ module.exports = {
       return res.status(400).json({error: true, message: 'Missing orderId'})
     }
 
+    let escrow = await Escrow.deployed()
     try {
       let r = await escrow.getOrderState(orderId, {from: await web3.eth.getCoinbase()})
       return res.json({error: false, message: 'Get Order state successful', state: r})
@@ -71,10 +72,11 @@ module.exports = {
       refundBuyer = req.param('refundBuyer'),
       refundSeller = req.param('refundSeller')
 
-    if (!web3.eth.isAddress(fromMember) ) {
+    if (!web3.utils.isAddress(fromMember) ) {
       return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
     }
 
+    let escrow = await Escrow.deployed()
     try {
       let r = await escrow.cancelOrder(orderId, fromMember, refundBuyer, refundSeller, {from: await  web3.eth.getCoinbase()})
       return res.json({error: false, message: 'Cancel order successful'})
@@ -84,7 +86,97 @@ module.exports = {
 
   },
 
+  refundingOrder: async function (req, res) {
+    let orderId = req.param('orderId'),
+      fromMember = req.param('fromMember'),
+      hash = req.param('hash')
 
+    if (!web3.utils.isAddress(fromMember) ) {
+      return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
+    }
+
+    let escrow = await Escrow.deployed()
+    try {
+      let r = await escrow.refundingOrder(fromMember, orderId, hash, {from: await  web3.eth.getCoinbase()})
+      return res.json({error: false, message: 'Refunding successful'})
+    } catch (e) {
+      return res.status(400).json({error: true, message: 'Only buyer can be cancel refunding order'})
+    }
+  },
+
+  refundedOrder: async function (req, res) {
+    let orderId = req.param('orderId'),
+      fromMember = req.param('fromMember'),
+      refundBuyer = req.param('refundBuyer'),
+      refundSeller = req.param('refundSeller')
+
+    if (!web3.utils.isAddress(fromMember) ) {
+      return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
+    }
+
+    let escrow = await Escrow.deployed()
+    try {
+      let r = await escrow.refundedOrder(fromMember, orderId, refundBuyer, refundSeller, {from: await  web3.eth.getCoinbase()})
+      return res.json({error: false, message: 'Refunded order successful'})
+    } catch (e) {
+      return res.status(400).json({error: true, message: 'Only seller can be confirm refunded success'})
+    }
+
+  },
+
+  deliverOrder: async function (req, res) {
+    let orderId = req.param('orderId'),
+      fromMember = req.param('fromMember'),
+      hash = req.param('hash')
+
+    if (!web3.utils.isAddress(fromMember) ) {
+      return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
+    }
+
+    let escrow = await Escrow.deployed()
+    try {
+      let r = await escrow.deliverOrder(fromMember, orderId, hash, {from: await  web3.eth.getCoinbase()})
+      return res.json({error: false, message: 'Deliver successful'})
+    } catch (e) {
+      return res.status(400).json({error: true, message: 'Only seller can be confirm delivery order'})
+    }
+  },
+
+  completedOrder: async function (req, res) {
+    let orderId = req.param('orderId'),
+      fromMember = req.param('fromMember'),
+      hash = req.param('hash')
+
+    if (!web3.utils.isAddress(fromMember) ) {
+      return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
+    }
+
+    let escrow = await Escrow.deployed()
+    try {
+      let r = await escrow.completedOrder(fromMember, orderId, hash, {from: await  web3.eth.getCoinbase()})
+      return res.json({error: false, message: 'Complete successful'})
+    } catch (e) {
+      return res.status(400).json({error: true, message: 'Only buyer can be confirm complete order'})
+    }
+  },
+
+  uploadDocument: async function (req, res) {
+    let orderId = req.param('orderId'),
+      fromMember = req.param('fromMember'),
+      hash = req.param('hash')
+
+    if (!web3.utils.isAddress(fromMember) ) {
+      return res.status(400).json({error: true, message: 'fromMember is not wallet address'})
+    }
+
+    let escrow = await Escrow.deployed()
+    try {
+      let r = await escrow.uploadDocument(fromMember, orderId, hash, {from: await  web3.eth.getCoinbase()})
+      return res.json({error: false, message: 'Upload document successful'})
+    } catch (e) {
+      return res.status(400).json({error: true, message: 'Only buyer & seller can be upload document'})
+    }
+  },
 
 };
 
